Fix question headers overflowing into the answers

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -20,16 +20,6 @@ body {
   padding-top: 30px;
 }
 
-.question-page {
-  padding-top: 100px;
-}
-
-@media(max-width: $screen-xs-max) {
-  .question-page {
-    padding-top: 130px;
-  }
-}
-
 .centre {
   text-align: center;
 }
